# SPDX-FileCopyrightText: 2025 Carl Schwan <carl@carlschwan.eu>
# SPDX-License-Identifier: BSD-2-Clause

add_executable(cascade
    aboutdialog.cpp
    benchmark.cpp
    codeeditor/QCXXHighlighter.cpp
    codeeditor/QCodeEditor.cpp
    codeeditor/QFramedTextAttribute.cpp
    codeeditor/QGLSLCompleter.cpp
    codeeditor/QGLSLHighlighter.cpp
    codeeditor/QJSONHighlighter.cpp
    codeeditor/QLanguage.cpp
    codeeditor/QLineNumberArea.cpp
    codeeditor/QLuaCompleter.cpp
    codeeditor/QLuaHighlighter.cpp
    codeeditor/QPythonCompleter.cpp
    codeeditor/QPythonHighlighter.cpp
    codeeditor/QStyleSyntaxHighlighter.cpp
    codeeditor/QSyntaxStyle.cpp
    codeeditor/QXMLHighlighter.cpp
    colorbutton.cpp
    connection.cpp
    isfmanager.cpp
    log.cpp
    main.cpp
    mainmenu.cpp
    mainwindow.cpp
    nodebase.cpp
    nodegraph.cpp
    nodegraphcontextmenu.cpp
    nodeinput.cpp
    nodeoutput.cpp
    nodeproperties.cpp
    preferencesdialog.cpp
    preferencesmanager.cpp
    projectmanager.cpp
    propertiesheading.cpp
    propertiesview.cpp
    renderer/cscommandbuffer.cpp
    renderer/csimage.cpp
    renderer/cssettingsbuffer.cpp
    renderer/vulkanrenderer.cpp
    rendermanager.cpp
    shadercompiler/SpvShaderCompiler.cpp
    slidernoclick.cpp
    uientities/channelselectentity.cpp
    uientities/checkboxentity.cpp
    uientities/codeeditorentity.cpp
    uientities/colorbuttonentity.cpp
    uientities/colorpropertiesentity.cpp
    uientities/comboboxentity.cpp
    uientities/cssliderboxentity.cpp
    uientities/fileboxentity.cpp
    uientities/folderboxentity.cpp
    uientities/lineeditentity.cpp
    uientities/resizepropertiesentity.cpp
    uientities/separatorentity.cpp
    uientities/sizeboxentity.cpp
    uientities/spinboxentity.cpp
    uientities/textboxentity.cpp
    uientities/textbrowserentity.cpp
    uientities/uientity.cpp
    uientities/writepropertiesentity.cpp
    viewerstatusbar.cpp
    vulkanview.cpp
    vulkanwindow.cpp
    windowmanager.cpp

    aboutdialog.h
    benchmark.h
    codeeditor/QCXXHighlighter.hpp
    codeeditor/QCodeEditor.hpp
    codeeditor/QFramedTextAttribute.hpp
    codeeditor/QGLSLCompleter.hpp
    codeeditor/QGLSLHighlighter.hpp
    codeeditor/QHighlightBlockRule.hpp
    codeeditor/QHighlightRule.hpp
    codeeditor/QJSONHighlighter.hpp
    codeeditor/QLanguage.hpp
    codeeditor/QLineNumberArea.hpp
    codeeditor/QLuaCompleter.hpp
    codeeditor/QLuaHighlighter.hpp
    codeeditor/QPythonCompleter.hpp
    codeeditor/QPythonHighlighter.hpp
    codeeditor/QStyleSyntaxHighlighter.hpp
    codeeditor/QSyntaxStyle.hpp
    codeeditor/QXMLHighlighter.hpp
    colorbutton.h
    connection.h
    global.h
    isfmanager.h
    log.h
    mainmenu.h
    mainwindow.h
    multithreading.h
    nodebase.h
    nodedefinitions.h
    nodegraph.h
    nodegraphcontextmenu.h
    nodeinput.h
    nodeoutput.h
    nodeproperties.h
    popupmessages.h
    preferencesdialog.h
    preferencesmanager.h
    projectmanager.h
    propertiesheading.h
    propertiesview.h
    renderer/cscommandbuffer.h
    renderer/csimage.h
    renderer/cssettingsbuffer.h
    renderer/renderconfig.h
    renderer/renderutility.h
    renderer/vulkanhppinclude.h
    renderer/vulkanrenderer.h
    rendermanager.h
    shadercompiler/DirStackFileIncluder.h
    shadercompiler/SpvShaderCompiler.h
    slidernoclick.h
    uicolors.h
    uientities/channelselectentity.h
    uientities/checkboxentity.h
    uientities/codeeditorentity.h
    uientities/colorbuttonentity.h
    uientities/colorpropertiesentity.h
    uientities/comboboxentity.h
    uientities/cssliderboxentity.h
    uientities/fileboxentity.h
    uientities/folderboxentity.h
    uientities/lineeditentity.h
    uientities/resizepropertiesentity.h
    uientities/separatorentity.h
    uientities/sizeboxentity.h
    uientities/spinboxentity.h
    uientities/textboxentity.h
    uientities/textbrowserentity.h
    uientities/uientity.h
    uientities/writepropertiesentity.h
    viewerstatusbar.h
    vulkanview.h
    vulkanwindow.h
    windowmanager.h

    ../resources.qrc
    codeeditor/qcodeeditor_resources.qrc
)

ki18n_wrap_ui(cascade
    mainwindow.ui
    nodebase.ui
    propertiesheading.ui
    uientities/channelselectentity.ui
    uientities/checkboxentity.ui
    uientities/colorbuttonentity.ui
    uientities/colorpropertiesentity.ui
    uientities/comboboxentity.ui
    uientities/cssliderboxentity.ui
    uientities/fileboxentity.ui
    uientities/folderboxentity.ui
    uientities/lineeditentity.ui
    uientities/resizepropertiesentity.ui
    uientities/separatorentity.ui
    uientities/sizeboxentity.ui
    uientities/spinboxentity.ui
    uientities/textboxentity.ui
    uientities/textbrowserentity.ui
    uientities/writepropertiesentity.ui
    viewerstatusbar.ui
)

target_link_libraries(cascade PUBLIC
    Qt::Widgets
    KF6::I18n
    OpenImageIO::OpenImageIO
    OpenColorIO::OpenColorIO
    SPIRV-Tools
    glslang::glslang
    TBB::tbb
)
